[package]
name = "pvphero-api"
version = "0.1.0"
authors = ["Gluon <gluon@pvphero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
redis = "*"
serde_derive = "^1.0.8"
serde_json = "^1.0.8"
serde = "^1.0.8"
bytes = "1.0.1"
hyper-tls = "0.5.0"